--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -123,9 +122,9 @@ header {
 
 /* Hero Banner Styles */
 .hero-banner {
-  /* background-image: url('https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-QOcdtonnxj0XxZyk4WQW3EqjFWcYAc.png'); */
-  /* background-size: cover;
-  background-position: center; */
+  background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.esquire.com%2Fstyle%2Fmens-fashion%2Fa61924660%2Funiqlo-c-clare-waight-keller-interview%2F&psig=AOvVaw2EukDwiX4idThF1TugPTA4&ust=1747128845621000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKCGoKTQnY0DFQAAAAAdAAAAABAE'); 
+  background-size: cover;
+  background-position: center;
   height: 500px;
   position: relative;
   display: flex;
@@ -422,4 +421,16 @@ footer {
   .banner-content h2 {
       font-size: 1.5rem;
   }
+}
+
+/* Product-link styles */
+.product-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
+
+.product-link:hover .product-card {
+  transform: translateY(-8px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
