adjust ui, add routes and search engin

--- a/includes/header.html
+++ b/includes/header.html
@@ -21,10 +21,10 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="/FirstWebsite/index.php" class="active">Home</a></li>
-                    <li><a href="#">Đồ Nam</a></li>
-                    <li><a href="#">Đồ Nữ</a></li>
-                    <li><a href="#">Đồ Bé Trai</a></li>
-                    <li><a href="#">Đồ Bé Gái</a></li>
+                    <li><a href="/FirstWebsite/index.php?category=do-nam">Đồ Nam</a></li>
+                    <li><a href="/FirstWebsite/index.php?category=do-nu">Đồ Nữ</a></li>
+                    <li><a href="/FirstWebsite/index.php?category=do-be-trai">Đồ Bé Trai</a></li>
+                    <li><a href="/FirstWebsite/index.php?category=do-be-gai">Đồ Bé Gái</a></li>
                 </ul>
             </nav>
             <form class="search-bar" method="get" action="/FirstWebsite/index.php">
@@ -111,5 +111,7 @@
         opacity: 1;
     }
     </style>
+
+    
 </body>
 </html>
