--- a/includes/footer.html
+++ b/includes/footer.html
@@ -30,7 +30,7 @@
                 <p><i class="fas fa-map-marker-alt"></i> Khu phố 6, P.Linh Trung, Tp.Thủ Đức, Tp.Hồ Chí Minh.</p>
                 <p><i class="fas fa-phone"></i> +84 915538518</p>
                 <p><i class="fab fa-facebook"></i> Facebook</p>
-                <p><i class="fas fa-envelope"></i> nguyenxuanvuong97.hcmus@gmail.com</p>
+                <p><i class="fas fa-envelope"></i> 23521066@gm.uit.edu.vn</p>
 
                 <div class="newsletter">
                     <input type="email" placeholder="Email address">
