--- a/includes/footer.html
+++ b/includes/footer.html
@@ -19,7 +19,7 @@
             <div class="footer-column">
                 <h3>ĐƯỜNG DẪN</h3>
                 <ul>
-                    <li><a href="#">Trang chủ</a></li>
+                    <li><a href="/FirstWebsite/index.php">Trang chủ</a></li>
                     <li><a href="#">Sản phẩm</a></li>
                     <li><a href="#">Về chúng tôi</a></li>
                 </ul>
